[package]
name = "fh"
version = "0.1.5"
authors = ["Determinate Systems <hello@determinate.systems>"]
edition = "2021"
license = "Apache 2.0"
repository = "https://github.com/DeterminateSystems/fh"

[dependencies]
async-trait = "0.1.73"
clap = { version = "4.3.2", default-features = false, features = [
  "color",
  "derive",
  "env",
  "help",
  "std",
  "error-context",
] }
clap_complete = "4.4.0"
color-eyre = { version = "0.6.2", default-features = false, features = [
  "issue-url",
] }
handlebars = "4.4.0"
indicatif = { version = "0.17.6", default-features = false }
inquire = "0.6.2"
lazy_static = "1.4.0"
nixel = "5.2.0"
prettytable-rs = "0.10.0"
regex = "1.9.4"
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
] }
semver = { version = "1.0.18", default-features = false, features = ["serde"] }
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
serde_json = "1.0.105"
thiserror = { version = "1.0.44", default-features = false }
tokio = { version = "1.30.0", default-features = false, features = [
  "fs",
  "macros",
  "rt-multi-thread",
] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
  "ansi",
  "env-filter",
  "json",
] }
url = { version = "2.4.0", default-features = false, features = ["serde"] }
urlencoding = "2.1.3"
