[package]
name = "fh"
version = "0.1.14"
authors = ["Determinate Systems <hello@determinate.systems>"]
edition = "2021"
license = "Apache 2.0"
repository = "https://github.com/DeterminateSystems/fh"

[dependencies]
async-trait = "0.1.73"
chrono = "0.4.31"
clap = { version = "4.3.2", default-features = false, features = [
  "color",
  "derive",
  "env",
  "help",
  "std",
  "error-context",
] }
clap_complete = "4.4.0"
color-eyre = { version = "0.6.2", default-features = false, features = [
  "issue-url",
] }
csv = "1.3.0"
gethostname = { version = "0.4.3", default-features = false }
handlebars = "4.4.0"
indicatif = { version = "0.17.6", default-features = false }
inquire = "0.6.2"
nix-config-parser = "0.2.0"
nixel = "5.2.0"
once_cell = "1.18.0"
owo-colors = "3.5.0"
regex = "1.9.4"
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls-native-roots",
] }
semver = { version = "1.0.18", default-features = false, features = ["serde"] }
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
serde_json = "1.0.105"
tabled = { version = "0.14.0", features = ["color"] }
thiserror = { version = "1.0.44", default-features = false }
tokio = { version = "1.30.0", default-features = false, features = ["full"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
  "ansi",
  "env-filter",
  "json",
] }
url = { version = "2.4.0", default-features = false, features = ["serde"] }
urlencoding = "2.1.3"
xdg = "2.5.2"

[dev-dependencies]
axum = { version = "0.6.20", features = ["macros"] }
axum-test = "12.5.0"
